# osm-changesets

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
osm_changesets/: asgi.py  feeds.py  forms.py  models.py  settings.py  settings_prod.py  settings_prod_ssl.py  tasks.py  urls.py  views.py  wsgi.py
osm_changesets/migrations/: 0001_initial.py  0002_alter_changeset_options_alter_changeset_created_at.py  0003_remove_user_user_name.py
osm_changesets/static/osm_changesets/: main.css  main.js
osm_changesets/templates/: 404.html  index.html
osm_changesets/templates/changesets/: 404.html  base.html  description.html  detail.html  feed_description.html  list.html
osm_changesets/templates/users/: detail.html
osm_pretty_rss/: asgi.py  feeds.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
osm_pretty_rss/migrations/: 0001_initial.py  0002_alter_changeset_options_alter_changeset_created_at.py  0003_remove_user_user_name.py
osm_pretty_rss/templates/: feed.html  index.html
osm_pretty_rss/templates/users/: detail.html
