[tool.poetry]
name = "osm-pretty-rss"
version = "0.1.0"
description = "A website that provides pretty RSS/Atom feeds for OpenStreetMap user changesets."
authors = ["Jakub Valenta <jakub@jakubvalenta.cz>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
Django = "^5.0.6"
py-staticmaps = "^0.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
types-requests = "^2.31.0.20240406"

[tool.flake8]
max-line-length = 100

[tool.isort]
profile = "django"
line_length = 100
skip = ["migrations"]

[tool.mypy]
exclude = ["/migrations/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
